fix: smooth scrolling on mobile

--- a/css/warkon.css
+++ b/css/warkon.css
@@ -42,6 +42,7 @@ video {
 #main-container {
   height: 100vh;
   overflow: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 #interactives {
   display:none;
